--- a/styles.css
+++ b/styles.css
@@ -146,3 +146,27 @@ background-position-x:center;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
+
+
+/*vista Registro*/
+
+.spinner {
+  margin: 0 auto;
+  width: 36px;
+  height: 36px;
+  border: 5px solid rgba(0, 0, 0, 0.3);
+  border-radius: 50%;
+  border-left-color: blue;
+
+  animation: spin 1s ease infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
