--- a/styles.css
+++ b/styles.css
@@ -189,3 +189,17 @@ background-position-x:center;
   background-size: cover;
   color: white
 }
+
+
+/*vista Planta de combustible*/
+
+#backgroundPlantasCombu{
+  background-image: url("https://images.unsplash.com/photo-1557683316-973673baf926?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8Z3JhZGllbnQlMjBibHVlfGVufDB8fDB8fA%3D%3D&w=1000&q=80");
+  background-repeat:no-repeat;
+  background-position-x:center;
+  background-position-y:25%; 
+  background-size: cover;
+  color: white
+
+ 
+}
