--- a/styles.css
+++ b/styles.css
@@ -204,4 +204,44 @@ background-position-x:center;
  
 }
 
+/* Style all font awesome icons */
+.fa {
+  margin-left: 100px;
+  padding: 20px;
+  font-size: 30px;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 50%;
+}
+
+/* Add a hover effect if you want */
+.fa:hover {
+  opacity: 0.7;
+}
+
+/* Set a specific color for each brand */
+
+/* Instagram */
+.fa-instagram {
+  background: #125688;
+  color: white;
+
+}
+
+
+/* linkedin */
+.fa-linkedin {
+  background: #2196f3;
+  color: white;
+
+}
+
+/* linkedin */
+.fa-google {
+  background: #dd4b39;
+  color: white;
+
+}
+
+
 
