--- a/views/aboutUs.html
+++ b/views/aboutUs.html
@@ -7,13 +7,13 @@
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="styles.css" rel="stylesheet">
+    <link href="../styles.css" rel="stylesheet">
   </head>
   <body>
     <header>            <!-- NAVBAR -->
       <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="http://127.0.0.1:5500/main.html">
+          <a class="navbar-brand" href="http://127.0.0.1:5500/views/main.html">
             <img src="https://skyblueja.com/wp-content/uploads/2021/05/White-charter-289x300.png" alt="" width="30" height="24" class="d-inline-block align-text-top bg-dark">
             The PilotBag 
           </a>
@@ -26,7 +26,7 @@
                 <!-- <a class="nav-link active" aria-current="page" href="/asd.html">Home</a> -->
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="http://127.0.0.1:5500/main.html">Home</a> 
+                <a class="nav-link" href="http://127.0.0.1:5500/views/main.html">Home</a> 
               </li>
             </ul>
           </div>
@@ -52,7 +52,7 @@
         
     </div>
     <div class="col-md-5">
-      <img id="imgAuboutUs" class="featurette-image img-fluid mx-auto" src="./public/img/imgAboutUs.jpg" alt="imgAboutUs">
+      <img id="imgAuboutUs" class="featurette-image img-fluid mx-auto" src="../public/img/imgAboutUs.jpg" alt="imgAboutUs">
       
     </div>
   </div>
@@ -65,10 +65,7 @@
         <p>&copy; Jorge Carlotto 👨‍💻 - Curso CODER HOUSE Javascript 2022 </p>
       </footer>  
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-  
-   
-   <script src="./Js/weatherAPI.js"></script>
-   <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
    
   </body>
 </html>
