--- a/views/main.html
+++ b/views/main.html
@@ -6,7 +6,7 @@
     <title>App Aeronautica</title>
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link href="styles.css" rel="stylesheet">
+    <link href="../styles.css" rel="stylesheet">
   </head>
   <body>
     <header>            <!-- NAVBAR -->
@@ -34,7 +34,7 @@
                 <a class="nav-link" href="#noticias">Noticias</a> 
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="http://127.0.0.1:5500/aboutUs.html">AboutUs</a> 
+                <a class="nav-link" href="http://127.0.0.1:5500/views/aboutUs.html">About Us</a> 
               </li>
 
             </ul>
@@ -102,21 +102,21 @@
 
         <h2 class="fw-normal">Calculo por Puntos GPS</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui deserunt, similique asperiores explicabo sed enim sint id quia quos ad quas omnis atque ea saepe animi eius distinctio voluptatum dolores?</p>
-        <p><a href="http://127.0.0.1:5500/pointToPoint.html" class="btn btn-secondary" >Comerzar &raquo;</a></p>
+        <p><a href="http://127.0.0.1:5500/views/pointToPoint.html" class="btn btn-secondary" >Comerzar &raquo;</a></p>
       </div>
       <div class="col-lg-4">
         <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="https://res.cloudinary.com/ddi161cze/image/upload/v1655338335/1292324964_0_p2iwua.jpg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></img>
 
         <h2 class="fw-normal">Distancia entre Aeropuertos</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui deserunt, similique asperiores explicabo sed enim sint id quia quos ad quas omnis atque ea saepe animi eius distinctio voluptatum dolores?</p>
-        <p><a id="disAeropuertos2" href="http://127.0.0.1:5500/airportDistance.html"  class="btn btn-secondary">Comerzar &raquo;</a></p>
+        <p><a id="disAeropuertos2" href="http://127.0.0.1:5500/views/airportDistance.html"  class="btn btn-secondary">Comerzar &raquo;</a></p>
       </div>
       <div class="col-lg-4">
         <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="https://res.cloudinary.com/ddi161cze/image/upload/v1655340297/download_hcqepr.png" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></img>
 
         <h2 class="fw-normal">Combustible</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui deserunt, similique asperiores explicabo sed enim sint id quia quos ad quas omnis atque ea saepe animi eius distinctio voluptatum dolores?</p>
-        <p><a id="calculosCumbustible" href="http://127.0.0.1:5500/fuelPlants.html"  class="btn btn-secondary" >Comerzar &raquo;</a></p>
+        <p><a id="calculosCumbustible" href="http://127.0.0.1:5500/views/fuelPlants.html"  class="btn btn-secondary" >Comerzar &raquo;</a></p>
       </div>
     </div>
     
@@ -208,7 +208,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
   
    
-   <script src="./Js/weatherAPI.js"></script>
+   <script src="../Js/weatherAPI.js"></script>
    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
    
   </body>
