--- a/views/airportDistance.html
+++ b/views/airportDistance.html
@@ -6,13 +6,13 @@
     <title>App Aeronautica</title>
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link href="styles.css" rel="stylesheet">
+    <link href="../styles.css" rel="stylesheet">
   </head>
   <body>
     <header>            <!-- NAVBAR -->
       <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="http://127.0.0.1:5500/main.html">
+          <a class="navbar-brand" href="http://127.0.0.1:5500/views/main.html">
             <img src="https://skyblueja.com/wp-content/uploads/2021/05/White-charter-289x300.png" alt="" width="30" height="24" class="d-inline-block align-text-top bg-dark">
             The PilotBag 
           </a>
@@ -25,7 +25,7 @@
                 <!-- <a class="nav-link active" aria-current="page" href="/asd.html">Home</a> -->
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="http://127.0.0.1:5500/main.html">Home</a> 
+                <a class="nav-link" href="http://127.0.0.1:5500/views/main.html">Home</a> 
               </li>
             </ul>
           </div>
@@ -75,7 +75,7 @@
       </footer>  
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
   
-   <script src="./Js/airportDistance.js"></script> 
+   <script src="../Js/airportDistance.js"></script> 
   </body>
 </html>
 
