--- a/views/register.html
+++ b/views/register.html
@@ -11,7 +11,7 @@
       integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
       crossorigin="anonymous"
     />
-    <link href="styles.css" rel="stylesheet" />
+    <link href="../styles.css" rel="stylesheet" />
   </head>
   <body id="backgroundLogin" class="text-center">
     <main class="form-signin w-100 m-auto">
@@ -74,7 +74,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="./Js/register.js"></script>
+    <script src="../Js/register.js"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   </body>
 </html>
