--- a/views/airportDistance.html
+++ b/views/airportDistance.html
@@ -1,22 +1,42 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>App Aeronautica</title>
-    
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link href="../styles.css" rel="stylesheet">
+
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+      crossorigin="anonymous"
+    />
+    <link href="../styles.css" rel="stylesheet" />
   </head>
   <body>
-    <header>            <!-- NAVBAR -->
+    <header>
+      <!-- NAVBAR -->
       <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="http://127.0.0.1:5500/views/main.html">
-            <img src="https://skyblueja.com/wp-content/uploads/2021/05/White-charter-289x300.png" alt="" width="30" height="24" class="d-inline-block align-text-top bg-dark">
-            The PilotBag 
+            <img
+              src="https://skyblueja.com/wp-content/uploads/2021/05/White-charter-289x300.png"
+              alt=""
+              width="30"
+              height="24"
+              class="d-inline-block align-text-top bg-dark"
+            />
+            The PilotBag
           </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarCollapse"
+            aria-controls="navbarCollapse"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarCollapse">
@@ -25,63 +45,99 @@
                 <!-- <a class="nav-link active" aria-current="page" href="/asd.html">Home</a> -->
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="http://127.0.0.1:5500/views/main.html">Home</a> 
+                <a class="nav-link" href="http://127.0.0.1:5500/views/main.html"
+                  >Home</a
+                >
               </li>
             </ul>
           </div>
         </div>
       </nav>
-      
+
       <!--FIN  NAVBAR -->
     </header>
-    
-<main id="mainDisAirport">
 
-    <div  class="b-example-divider"></div>
+    <main id="mainDisAirport">
+      <div class="b-example-divider"></div>
 
-    <div   class="container col-xl-10 col-xxl-8 px-4 py-5">
-      <div class="row align-items-center g-lg-5 py-5">
-        <div  class="col-lg-7 text-center text-lg-start">
-          <h1 class="display-4 fw-bold lh-1 mb-3 text-white">Distancia entre Aeropuestos</h1>
-          <p  id ="subTextoDistanciaAirport"class="col-lg-10 fs-4 text-white">Esta herramienta permite obtener la distancia entre dos aeropuertos.</p>
-        </div>
-        <div class="col-md-10 mx-auto col-lg-5">
-          <form id="DisAirportForm" class="p-4 p-md-5 border rounded-3 bg-light">
-            
-            <small class="text-muted"> Aeropuertos disponibles:</small>
-            <br>
-            <small class="text-muted"> (1)Mar del Plata,(2)Aeroparque,(3)Ezeiza</small>
-            <hr class="my-4">
-            <div class="form-floating mb-3">
-              <input type="text" class="form-control"  placeholder="name@example.com" name="JORGE">
-              <label for="floatingInput">Numero Aeropuerto de salida</label>
-            </div>
-            <div class="form-floating mb-3">
-                <input type="text" class="form-control" placeholder="name@example.com">
-                <label for="floatingInput">Numero Aeropuerto de llegada</label>
+      <div class="container col-xl-10 col-xxl-8 px-4 py-5">
+        <div class="row align-items-center g-lg-5 py-5">
+          <div class="col-lg-7 text-center text-lg-start">
+            <h1 class="display-4 fw-bold lh-1 mb-3 text-white">
+              Distancia entre Aeropuestos
+            </h1>
+            <p id="subTextoDistanciaAirport" class="col-lg-10 fs-4 text-white">
+              Esta herramienta permite obtener la distancia entre dos
+              aeropuertos.
+            </p>
+          </div>
+          <div class="col-md-10 mx-auto col-lg-5">
+            <form
+              id="DisAirportForm"
+              class="p-4 p-md-5 border rounded-3 bg-light"
+            >
+              <small class="text-muted"> Selecciona los Aeropuertos:</small>
+              <br />
+
+              <hr class="my-4" />
+
+              <div class="col-md-12">
+                <label for="country" class="form-label"
+                  >Aeropuerto de Salida</label
+                >
+                <select
+                  id="testSelectOne"
+                  class="form-select"
+                  id="country"
+                  required
+                >
+                  <option value="">Elige...</option>
+                </select>
+                <div class="invalid-feedback">
+                  Please select a valid country.
+                </div>
               </div>
-
-            <button id="DisAirportBtn" class="w-100 btn btn-lg btn-primary" type="submit">Calcular</button>
-
-          </form>
+              <br />
+              <div class="col-md-12">
+                <label for="country" class="form-label"
+                  >Aeropuerto de LLegada</label
+                >
+                <select
+                  id="testSelectTwo"
+                  class="form-select"
+                  id="country"
+                  required
+                >
+                  <option value="">Elige...</option>
+                </select>
+                <div class="invalid-feedback">
+                  Please select a valid country.
+                </div>
+              </div>
+              <br />
+              <button
+                id="DisAirportBtn"
+                class="w-100 btn btn-lg btn-primary"
+                type="submit"
+              >
+                Calcular
+              </button>
+            </form>
+          </div>
         </div>
+        <div id="resultadoDistAirport"></div>
       </div>
-      <div id="resultadoDistAirport"></div>
-    </div>
-</main>
-<footer class="container fixed-bottom">
-        <br>
-      <p>&copy; Jorge Carlotto 👨‍💻  - Curso CODER HOUSE Javascript 2022 </p>
-      </footer>  
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-  
-   <script src="../Js/airportDistance.js"></script> 
+    </main>
+    <footer class="container">
+      <br />
+      <p>&copy; Jorge Carlotto 👨‍💻 - Curso CODER HOUSE Javascript 2022</p>
+    </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+      crossorigin="anonymous"
+    ></script>
+
+    <script src="../Js/airportDistance.js"></script>
   </body>
 </html>
-
-
-
-
-
-
-
